--- a/src/Components/css/Homepage.css
+++ b/src/Components/css/Homepage.css
@@ -16,8 +16,5 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 10em;
-  font-weight: bold;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-family: "Fira Sans", sans-serif;
 }
