--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,22 @@
   font-family: "Roboto", sans-serif;
   background-color: #e4e9f5;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #e4e9f5;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #1cbcff;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00d4bd;
+}
