--- a/src/Components/css/HomepageCss/ExpertIn.css
+++ b/src/Components/css/HomepageCss/ExpertIn.css
@@ -7,7 +7,7 @@
 .expertSection .title {
   text-transform: uppercase;
   margin-bottom: 50px;
-  color: #008778;
+  color: #000;
 }
 .expertSection .expertCards {
   display: flex;
@@ -22,6 +22,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.expertSection .expertCard .expertCardLogo {
+  font-size: 50px;
 }
 .expertSection .expertCard > p {
   text-transform: uppercase;
