--- a/src/Components/css/HomepageCss/ExpertIn.css
+++ b/src/Components/css/HomepageCss/ExpertIn.css
@@ -4,17 +4,18 @@
   flex-direction: column;
   align-items: center;
 }
-.expertSection .title {
+.title {
   text-transform: uppercase;
   margin-bottom: 50px;
   color: #000;
 }
-.expertSection .expertCards {
+.expertCards {
   display: flex;
   gap: 20px;
   flex-wrap: wrap;
+  justify-content: center;
 }
-.expertSection .expertCard {
+.expertCard {
   height: 300px;
   width: 250px;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -23,11 +24,29 @@
   justify-content: center;
   align-items: center;
 }
-.expertSection .expertCard .expertCardLogo {
+.expertCardLogo {
   font-size: 50px;
 }
-.expertSection .expertCard > p {
+.expertCard > p {
   text-transform: uppercase;
   font-size: 20px;
   font-weight: bold;
+}
+@media screen and (max-width: 740px) {
+  .expertSection {
+    padding: 40px;
+  }
+  .expertCards {
+    gap: 10px;
+  }
+  .expertCard {
+    height: 200px;
+    width: 150px;
+  }
+  .expertCardLogo {
+    font-size: 40px;
+  }
+  .expertCard > p {
+    font-size: 16px;
+  }
 }
