--- a/src/Components/css/Navbar.css
+++ b/src/Components/css/Navbar.css
@@ -3,8 +3,9 @@ nav {
   top: 0px;
   z-index: 5;
   background-color: #e4e9f5;
+  height: 7vh;
 }
-nav ul {
+.menuList {
   list-style: none;
   height: 7vh;
   display: flex;
@@ -20,4 +21,44 @@ nav li a {
 
 nav li a:hover {
   border-bottom: 1px solid #ff4522;
+}
+#checkIcon,
+#check {
+  display: none;
+}
+@media screen and (max-width: 740px) {
+  #checkIcon {
+    display: block;
+    position: absolute;
+    top: 1vh;
+    right: 50px;
+    font-size: 50px;
+    color: #000;
+  }
+  .menuList {
+    position: absolute;
+    justify-content: left;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 50px;
+    height: 100vh;
+    width: 250px;
+    background-color: #1cbcff;
+    top: 8vh;
+    right: -100%;
+    transition: 0.3s;
+  }
+  nav li a {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 20px;
+  }
+  #check:checked ~ .menuList {
+    right: 0px;
+    transition: 0.3s;
+  }
+  #check:checked ~ #checkIcon {
+    color: #1cbcff;
+  }
 }
