--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -1,4 +1,6 @@
-$color60: #f4f6f8;
-$color30: #343a40;
+$color60: #ffffff;
+$color30: #f4f6f8;
 $color10: #ff4522;
-$color10Light: #ffdad3;
+$color10Light: #ffeae6;
+
+$fontColor: #343a40;
