--- a/src/css/_colors.scss
+++ b/src/css/_colors.scss
@@ -1,6 +1,6 @@
 $color60: #ffffff;
 $color30: #f4f6f8;
 $color10: #ff4522;
-$color10Light: #ffeae6;
+$color10Light: #f8ecec;
 
 $fontColor: #343a40;
