--- a/src/css/aboutUs.scss
+++ b/src/css/aboutUs.scss
@@ -1,6 +1,5 @@
-@import "./colors";
+@import "_colors";
 #about {
-  margin-top: 5rem;
   .aboutContainer {
     .aboutText {
       h1 {
@@ -9,17 +8,15 @@
         margin: auto;
         text-transform: uppercase;
         font-weight: 800;
-
         padding: 0.5rem 1rem;
-        border-bottom: 1px solid;
-        border-left: 1px solid;
+        border-bottom: 3px solid;
         border-color: $color10;
-        border-radius: 0 0 0 1rem;
       }
       p {
         max-width: 992px;
         margin: 1rem auto;
-        text-align: center;
+        text-align: justify;
+        text-align-last: center;
       }
     }
     .howWeWork {
